--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -9,25 +9,25 @@
   <link rel="canonical" href="{{ canonical_url }}">
 
   {% if settings.favicon != blank %}
-    <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
+  <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
   {% endif %}
 
   {% capture seo_title %}
-    {{ page_title }}
-    {% if current_tags %}
-      {%- assign meta_tags = current_tags | join: ', ' %} &ndash; {{ 'general.meta.tags' | t: tags: meta_tags -}}
-    {% endif %}
-    {% if current_page != 1 %}
-      &ndash; {{ 'general.meta.page' | t: page: current_page }}
-    {% endif %}
-    {% unless page_title contains shop.name %}
-      &ndash; {{ shop.name }}
-    {% endunless %}
+  {{ page_title }}
+  {% if current_tags %}
+  {%- assign meta_tags = current_tags | join: ', ' %} &ndash; {{ 'general.meta.tags' | t: tags: meta_tags -}}
+  {% endif %}
+  {% if current_page != 1 %}
+  &ndash; {{ 'general.meta.page' | t: page: current_page }}
+  {% endif %}
+  {% unless page_title contains shop.name %}
+  &ndash; {{ shop.name }}
+  {% endunless %}
   {% endcapture %}
   <title>{{ seo_title }}</title>
 
   {% if page_description %}
-    <meta name="description" content="{{ page_description | escape }}">
+  <meta name="description" content="{{ page_description | escape }}">
   {% endif %}
 
   {% include 'social-meta-tags' %}
@@ -36,25 +36,25 @@
   {% include 'google-fonts' %}
 
   <script>
-    var theme = {
-      strings: {
-        addToCart: {{ 'products.product.add_to_cart' | t | json }},
-        soldOut: {{ 'products.product.sold_out' | t | json }},
-        unavailable: {{ 'products.product.unavailable' | t | json }},
-        showMore: {{ 'general.filters.show_more' | t | json }},
-        showLess: {{ 'general.filters.show_less' | t | json }}
-      },
-      moneyFormat: {{ shop.money_format | json }}
-    }
+  var theme = {
+    strings: {
+      addToCart: {{ 'products.product.add_to_cart' | t | json }},
+      soldOut: {{ 'products.product.sold_out' | t | json }},
+      unavailable: {{ 'products.product.unavailable' | t | json }},
+      showMore: {{ 'general.filters.show_more' | t | json }},
+      showLess: {{ 'general.filters.show_less' | t | json }}
+    },
+    moneyFormat: {{ shop.money_format | json }}
+  }
 
-    document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+  document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
   </script>
 
   <!--[if (lte IE 9) ]>{{ 'match-media.min.js' | asset_url | script_tag }}<![endif]-->
 
   {% if template.directory == 'customers' %}
-    <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script><!--<![endif]-->
-    <!--[if lte IE 9]><script src="{{ 'shopify_common.js' | shopify_asset_url }}"></script><![endif]-->
+  <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script><!--<![endif]-->
+  <!--[if lte IE 9]><script src="{{ 'shopify_common.js' | shopify_asset_url }}"></script><![endif]-->
   {% endif %}
 
   <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'vendor.js' | asset_url }}" defer="defer"></script><!--<![endif]-->
@@ -75,201 +75,200 @@
 
   <!-- Plugin CSS -->
   {{ '//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' | stylesheet_tag }}
-  <link rel="stylesheet" href="lib/simple-line-icons/css/simple-line-icons.css">
-  <link rel="stylesheet" href="lib/device-mockups/device-mockups.min.css">
 
   <!-- Theme CSS -->
   {{ 'resto.css' | asset_url | stylesheet_tag }}
 
   <!-- javascript -->
-  <script src="assets/vendors/jquery.min.js"></script>
-  <script src="assets/owlcarousel/owl.carousel.js"></script>
+  <script src="{{ 'jquery.min.js' | asset_url }}" defer="defer"></script>
+  <script src="{{ 'owl.carousel.js' | asset_url }}" defer="defer"></script>
+
 
   {{ content_for_header }}
 </head>
 
 <body class="template-{{ template | split: '.' | first }}">
 
-<!-- Bootstrap -->
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-      </button>
-      <a class="navbar-brand page-scroll" href="index.html">Fun Bites</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a class="page-scroll" href="#download">Order</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="menu.html">Menu</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="page.html">About</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container-fluid -->
-</nav>
-
-<header>
-  <div class="header-overlay">
+  <!-- Bootstrap -->
+  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="header-content">
-            <div class="header-content-inner">
-              <!-- <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1> -->
-              <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a> -->
-              <h1>Fun <span>Bites</span></h1>
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand page-scroll" href="index.html">Fun Bites</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a class="page-scroll" href="#download">Order</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="menu.html">Menu</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="page.html">About</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+
+  <header>
+    <div class="header-overlay">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="header-content">
+              <div class="header-content-inner">
+                <!-- <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1> -->
+                <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a> -->
+                <h1>Fun <span>Bites</span></h1>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<section id="download" class="download bg-primary text-center">
-  <div class="container">
-    <div class="col-md-10 col-md-offset-1 slider">
-      <div class="box">
-        <div class="col-md-7 col-sm-7">
-          <img src="img/1.jpg" class="img-responsive">
+  <section id="download" class="download bg-primary text-center">
+    <div class="container">
+      <div class="col-md-10 col-md-offset-1 slider">
+        <div class="box">
+          <div class="col-md-7 col-sm-7">
+            <img src="img/1.jpg" class="img-responsive">
+          </div>
+          <div class="col-md-5 col-sm-5">
+            <div class="caption-first">
+              <h3> Modern Filipino Style </h3>
+              <p>Experience menu choices that reveal the character of Philippines, region by region, prepared with only the freshest ingredients by our highly skilled culinary team.</p>
+            </div>
+          </div>
         </div>
-        <div class="col-md-5 col-sm-5">
-          <div class="caption-first">
-            <h3> Modern Filipino Style </h3>
-            <p>Experience menu choices that reveal the character of Philippines, region by region, prepared with only the freshest ingredients by our highly skilled culinary team.</p>
+        <div class="box">
+          <div class="col-md-5 col-sm-5">
+            <div class="caption-first">
+              <h3> Great Service! </h3>
+              <p>It’s not just about first rate cuisine and an award winning wine list. Our highly trained and exceedingly personable staff are there to help you navigate our selections and ensure a memorable dining experience.</p>
+            </div>
+          </div>
+          <div class="col-md-7 col-sm-7">
+            <img src="img/2.jpg" class="img-responsive second-food">
+
           </div>
         </div>
       </div>
-      <div class="box">
-        <div class="col-md-5 col-sm-5">
-          <div class="caption-first">
-            <h3> Great Service! </h3>
-            <p>It’s not just about first rate cuisine and an award winning wine list. Our highly trained and exceedingly personable staff are there to help you navigate our selections and ensure a memorable dining experience.</p>
-          </div>
-        </div>
-        <div class="col-md-7 col-sm-7">
-          <img src="img/2.jpg" class="img-responsive second-food">
 
-        </div>
-      </div>
     </div>
-
-  </div>
-</section>
+  </section>
 
 
-<section class="cta" id="specialties">
-  <div class="parallax-layer parallax-layer-base">
-    <div class="cta-content ">
-      <div class="container text-center">
+  <section class="cta" id="specialties">
+    <div class="parallax-layer parallax-layer-base">
+      <div class="cta-content ">
+        <div class="container text-center">
           <h2>Our Menus</h2>
+        </div>
+      </div>
+      <div class="overlay"></div>
+    </div>
+  </section>
+
+  <section id="ourmenu" class="ourmenu bg-primary">
+    <div class="container">
+      <div class="col-md-10 col-md-offset-1 board">
+        <!-- <h3 class="text-center">-Our Menu-</h3> -->
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem ipsum has been the ipsum has been the ipsum has been the</p>
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <img src="img/food-1.png" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="img/steak.png" class="img-responsive center-block">
+            <h4>Steak</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="img/food-3.png" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="img/food-3.png" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="img/food-3.png" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="img/food-3.png" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="img/food-3.png" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="img/food-3.png" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="img/food-3.png" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+        </div>
+
+        <a id="find-button" href="#about" class="btn btn-outline btn-xl page-scroll sr-button">View Full Menu</a>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="newsletter" id="newsletter">
+    <div class="container ">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h2 class="section-heading">Stay in touch with updates</h2>
+
+          <form id="register-newsletter">
+            <input type="text" name="newsletter" required="" placeholder="Enter your email address">
+            <input type="submit" class="btn btn-custom-3" value="SIGN UP">
+          </form>
+        </div>
+
+
       </div>
     </div>
     <div class="overlay"></div>
-  </div>
-</section>
-
-<section id="ourmenu" class="ourmenu bg-primary">
-  <div class="container">
-    <div class="col-md-10 col-md-offset-1 board">
-      <!-- <h3 class="text-center">-Our Menu-</h3> -->
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem ipsum has been the ipsum has been the ipsum has been the</p>
-      <div class="owl-carousel owl-theme">
-        <div class="item">
-          <img src="img/food-1.png" class="img-responsive center-block">
-          <h4>Chicken Wings</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-        <div class="item">
-          <img src="img/steak.png" class="img-responsive center-block">
-          <h4>Steak</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-        <div class="item">
-          <img src="img/food-3.png" class="img-responsive center-block">
-          <h4>Chicken Wings</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-        <div class="item">
-          <img src="img/food-3.png" class="img-responsive center-block">
-          <h4>Chicken Wings</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-        <div class="item">
-          <img src="img/food-3.png" class="img-responsive center-block">
-          <h4>Chicken Wings</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-        <div class="item">
-          <img src="img/food-3.png" class="img-responsive center-block">
-          <h4>Chicken Wings</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-        <div class="item">
-          <img src="img/food-3.png" class="img-responsive center-block">
-          <h4>Chicken Wings</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-        <div class="item">
-          <img src="img/food-3.png" class="img-responsive center-block">
-          <h4>Chicken Wings</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-        <div class="item">
-          <img src="img/food-3.png" class="img-responsive center-block">
-          <h4>Chicken Wings</h4>
-          <span class="price">P150.00</span>
-          <hr>
-        </div>
-      </div>
-
-      <a id="find-button" href="#about" class="btn btn-outline btn-xl page-scroll sr-button">View Full Menu</a>
-    </div>
-
-  </div>
-</section>
-
-<section class="newsletter" id="newsletter">
-  <div class="container ">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h2 class="section-heading">Stay in touch with updates</h2>
-
-        <form id="register-newsletter">
-          <input type="text" name="newsletter" required="" placeholder="Enter your email address">
-          <input type="submit" class="btn btn-custom-3" value="SIGN UP">
-        </form>
-      </div>
-
-
-    </div>
-  </div>
-  <div class="overlay"></div>
-</section>
-<!-- Bootstrap End -->
+  </section>
+  <!-- Bootstrap End -->
 
   <a class="in-page-link visually-hidden skip-link" href="#MainContent">{{ 'general.accessibility.skip_to_content' | t }}</a>
 
