--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -145,7 +145,7 @@
       <div class="col-md-10 col-md-offset-1 slider">
         <div class="box">
           <div class="col-md-7 col-sm-7">
-            <img src="img/1.jpg" class="img-responsive">
+            <img src="{{ '1.jpg' | asset_url }}" alt="{{ shop.name }}" class="img-responsive">
           </div>
           <div class="col-md-5 col-sm-5">
             <div class="caption-first">
@@ -162,8 +162,7 @@
             </div>
           </div>
           <div class="col-md-7 col-sm-7">
-            <img src="img/2.jpg" class="img-responsive second-food">
-
+            <img src="{{ '2.jpg' | asset_url }}" alt="{{ shop.name }}" class="img-responsive second-food">
           </div>
         </div>
       </div>
@@ -190,19 +189,38 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem ipsum has been the ipsum has been the ipsum has been the</p>
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <img src="img/food-1.png" class="img-responsive center-block">
+            <img src="{{ 'food-1.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Chicken Wings</h4>
             <span class="price">P150.00</span>
             <hr>
           </div>
           <div class="item">
             <img src="img/steak.png" class="img-responsive center-block">
+            <img src="{{ 'steak.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Steak</h4>
             <span class="price">P150.00</span>
             <hr>
           </div>
           <div class="item">
-            <img src="img/food-3.png" class="img-responsive center-block">
+            <img src="{{ 'food-3.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="{{ 'food-3.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="{{ 'food-3png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
+            <h4>Chicken Wings</h4>
+            <span class="price">P150.00</span>
+            <hr>
+          </div>
+          <div class="item">
+            <img src="{{ 'food-1.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Chicken Wings</h4>
             <span class="price">P150.00</span>
             <hr>
@@ -214,31 +232,13 @@
             <hr>
           </div>
           <div class="item">
-            <img src="img/food-3.png" class="img-responsive center-block">
+            <img src="{{ 'food-3.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Chicken Wings</h4>
             <span class="price">P150.00</span>
             <hr>
           </div>
           <div class="item">
-            <img src="img/food-3.png" class="img-responsive center-block">
-            <h4>Chicken Wings</h4>
-            <span class="price">P150.00</span>
-            <hr>
-          </div>
-          <div class="item">
-            <img src="img/food-3.png" class="img-responsive center-block">
-            <h4>Chicken Wings</h4>
-            <span class="price">P150.00</span>
-            <hr>
-          </div>
-          <div class="item">
-            <img src="img/food-3.png" class="img-responsive center-block">
-            <h4>Chicken Wings</h4>
-            <span class="price">P150.00</span>
-            <hr>
-          </div>
-          <div class="item">
-            <img src="img/food-3.png" class="img-responsive center-block">
+            <img src="{{ 'food-1.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Chicken Wings</h4>
             <span class="price">P150.00</span>
             <hr>
