Removed old theme navigation

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -270,13 +270,13 @@
   </section>
   <!-- Bootstrap End -->
 
-  {% section 'header' %}
+  <!-- {% section 'header' %} -->
 
-  <div class="page-container" id="PageContainer">
+  <!-- <div class="page-container" id="PageContainer">
 
     <main class="main-content" id="MainContent" role="main">
       {{ content_for_layout }}
-    </main>
+    </main> -->
 
     {% section 'footer' %}
 
