--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,4 @@
-{% if section.settings.message %}
+<!-- {% if section.settings.message %}
   <style>
     .notification-bar {
       background-color: {{ section.settings.color_bg }};
@@ -193,7 +193,7 @@
       }
     {% endif %}
   </style>
-</div>
+</div> -->
 
 {% schema %}
   {
