--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -1,4 +1,4 @@
-<div data-section-id="{{ section.id }}" data-section-type="slideshow-section">
+<!-- <div data-section-id="{{ section.id }}" data-section-type="slideshow-section">
 
   {% if section.blocks.size > 0 %}
     <div class="slideshow-wrapper">
@@ -94,7 +94,7 @@
       {{ 'homepage.onboarding.no_content' | t }}
     </div>
   {% endif %}
-</div>
+</div> -->
 
 {% schema %}
   {
