--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -1,5 +1,5 @@
 <style>
-  {% case section.settings.grid %}
+  /*{% case section.settings.grid %}
   {% when '2' %}
     .grid__item--{{section.id}} .grid-view-item__image {
       max-height: 530px;
@@ -16,10 +16,10 @@
     .grid__item--{{section.id}} .grid-view-item__image {
       max-height: 195px;
     }
-  {% endcase %}
+  {% endcase %}*/
 </style>
 
-<div class="page-width">
+<!-- <div class="page-width">
   {% if section.settings.title != blank %}
     <div class="section-header text-center">
       <h2>{{ section.settings.title | escape }}</h2>
@@ -80,7 +80,7 @@
     </div>
   {% endif %}
 
-</div>
+</div> -->
 
 {% schema %}
   {
