--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -31,7 +31,7 @@
   {% endif %}
 
   {% include 'social-meta-tags' %}
-
+<!-- 
   {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
   {% include 'google-fonts' %}
 
@@ -62,7 +62,7 @@
 
   <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'theme.js' | asset_url }}" defer="defer"></script><!--<![endif]-->
   <!--[if lte IE 9]><script src="{{ 'theme.js' | asset_url }}"></script><![endif]-->
-  <!-- Bootstrap Core CSS -->
+  <!-- Bootstrap Core CSS --> -->
   {{ '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' | stylesheet_tag }}
 
   <!-- Custom Fonts -->
