--- a/sections/feature-row.liquid
+++ b/sections/feature-row.liquid
@@ -1,4 +1,4 @@
-<div class="page-width feature-row">
+<!-- <div class="page-width feature-row">
   {% capture image_layout %}
     <div class="feature-row__item">
       {% if section.settings.image != blank %}
@@ -32,7 +32,7 @@
       {{ image_layout }}
     {% endif %}
   </div>
-</div>
+</div> -->
 
 {% schema %}
   {
