--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -1,4 +1,4 @@
-<div class="page-width">
+<!-- <div class="page-width">
   <header class="section-header text-center">
     <h1>{{ page_title }}</h1>
   </header>
@@ -11,4 +11,4 @@
     {% endfor %}
   </div>
 </div>
-
+ -->
