--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -1,4 +1,4 @@
-{%- assign product = all_products[section.settings.featured_product] -%}
+<!-- {%- assign product = all_products[section.settings.featured_product] -%}
 
 {% if product == empty %}
   {%- assign section_onboarding = true -%}
@@ -214,7 +214,7 @@
   <script type="application/json" id="ProductJson-{{ section.id }}">
     {{ product | json }}
   </script>
-{% endunless %}
+{% endunless %} -->
 
 {% schema %}
   {
