--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -268,7 +268,7 @@
     <div class="overlay"></div>
   </section>
   <!-- Bootstrap End -->
-
+{{content_for_layout}}
     {% section 'footer' %}
 
     <script src="{{'//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'}}" defer="defer"></script>
