--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -173,7 +173,7 @@ document.documentElement.className = document.documentElement.className.replace(
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem ipsum has been the ipsum has been the ipsum has been the</p>
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <img src="{{ 'food-1.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
+            <img src="{{ 'food-3.png' | asset_url }}" alt="{{ shop.name }}" class="img-responsive center-block">
             <h4>Chicken Wings</h4>
             <span class="price">P150.00</span>
             <hr>
@@ -252,6 +252,45 @@ document.documentElement.className = document.documentElement.className.replace(
     </div>
     <div class="overlay"></div>
   </section>
+  <footer>
+    <div class="container">
+      <div class="col-md-4">
+        <h4>About us</h4>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the ipsum has been the ipsum has been the</p>
+        <br>
+        <h5><i class="fa fa-clock-o" aria-hidden="true"></i> Opening Hours:</h5>
+        <p>Monday - Friday 8:00 am - 6:00 pm </p>
+        <p>Saturday & Sunday 8:00 am - 8:00 pm </p>
+      </div>
+      <div class="col-md-4">
+        <h4>Location</h4>
+        <p><i class="fa fa-location-arrow" aria-hidden="true"></i> Ledesma Extension, Ozamiz City </p>
+        <p><i class="fa fa-phone" aria-hidden="true"></i> +63918-520-8606</p>
+        <p><i class="fa fa-envelope-o" aria-hidden="true"></i> info@pinkrada.com </p>
+      </div>
+      <div class="col-md-4 social-media">
+        <h4>Connect With Us!</h4>
+        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+        <i class="fa fa-pinterest-square" aria-hidden="true"></i>
+      </div>
+      <div class="col-md-12 copyright">
+        <p>&copy; 2017 Fun Bites. All Rights Reserved.</p>
+        <ul class="list-inline">
+          <li>
+            <a href="#">Privacy</a>
+          </li>
+          <li>
+            <a href="#">Terms</a>
+          </li>
+          <li>
+            <a href="#">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
   <!-- Bootstrap End -->
   {{content_for_layout}}
   {% section 'footer' %}
