--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -271,7 +271,7 @@ document.documentElement.className = document.documentElement.className.replace(
   {{ 'jquery.parallax.min.js' | asset_url | script_tag }}
   <script type="text/javascript">
   $('.cta').parallax("-100px", 0.4);
-  $('header').parallax("-100px", 0.1);
+  // $('header').parallax("-100px", 0.1);
   </script>
   <script>
 
