--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -117,7 +117,7 @@ document.documentElement.className = document.documentElement.className.replace(
     </div>
   </section>
 
-  
+  {% section 'front-home' %}
 
   {% section 'newsletter' %}
   <!-- Bootstrap End -->
