--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -75,37 +75,6 @@ document.documentElement.className = document.documentElement.className.replace(
 
 {% section 'header' %}
 
-  <section id="download" class="download bg-primary text-center">
-    <div class="container">
-      <div class="col-md-10 col-md-offset-1 slider">
-        <div class="box">
-          <div class="col-md-7 col-sm-7">
-            <img src="{{ '1.jpg' | asset_url }}" alt="{{ shop.name }}" class="img-responsive">
-          </div>
-          <div class="col-md-5 col-sm-5">
-            <div class="caption-first">
-              <h3> Modern Filipino Style </h3>
-              <p>Experience menu choices that reveal the character of Philippines, region by region, prepared with only the freshest ingredients by our highly skilled culinary team.</p>
-            </div>
-          </div>
-        </div>
-        <div class="box">
-          <div class="col-md-5 col-sm-5">
-            <div class="caption-first">
-              <h3> Great Service! </h3>
-              <p>It’s not just about first rate cuisine and an award winning wine list. Our highly trained and exceedingly personable staff are there to help you navigate our selections and ensure a memorable dining experience.</p>
-            </div>
-          </div>
-          <div class="col-md-7 col-sm-7">
-            <img src="{{ '2.jpg' | asset_url }}" alt="{{ shop.name }}" class="img-responsive second-food">
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-
   <section class="cta" id="specialties">
     <div class="parallax-layer parallax-layer-base">
       <div class="cta-content ">
@@ -117,7 +86,7 @@ document.documentElement.className = document.documentElement.className.replace(
     </div>
   </section>
 
-  {% section 'front-home' %}
+  {% section 'featured-home' %}
 
   {% section 'newsletter' %}
   <!-- Bootstrap End -->
