Fix page template

--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,7 +1,7 @@
 <section class="inner-page-section">
   <div class="container">
     <div class="col-md-5">
-    <img src="img/inner.jpg" >
+    <img src="{{ 'inner.jpg' | asset_url }}" alt="{{ shop.name }}" class="img-responsive">
     </div>
     <div class="col-md-7">
       <div class="inner-box">
