--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -77,6 +77,13 @@ document.documentElement.className = document.documentElement.className.replace(
 
   <!-- Bootstrap End -->
   {{content_for_layout}}
+  <div class="grid grid--uniform">
+    {% for collection in collections %}
+      <div class="grid__item small--one-half medium-up--one-third">
+        {% include 'collection-grid-item' %}
+      </div>
+    {% endfor %}
+  </div>
   {% section 'footer' %}
 
   <!-- javascript -->
