--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -76,6 +76,7 @@
 
   <!-- Bootstrap End -->
   {{content_for_layout}}
+{% section 'featured-product' %}
 
   {% section 'footer' %}
 
@@ -85,7 +86,7 @@
 
   {{ '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' | script_tag }}
   {{ '//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js' | script_tag }}
-  
+
   <!-- Theme JavaScript -->
   <!-- <script src="{{'new-age.min.js' | asset_url }}" defer="defer"></script>
   <script src="{{'jquery.parallax.min.js' | asset_url }}" defer="defer"></script> -->
