--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -76,7 +76,7 @@
 
   <!-- Bootstrap End -->
   {{content_for_layout}}
-{% section 'feature-columns' %}
+{% section 'collection-list' %}
 
   {% section 'footer' %}
 
