--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -98,7 +98,7 @@
           <div class="grid grid--uniform">
             {% for block in section.blocks limit: section.blocks.size %}
               <div class="grid__item {{ grid_item_width }}" {{ block.shopify_attributes }}>
-                {%- assign collection = collections[block.settings.collection] -%}
+                {%- assign collection = collections[main-menu] -%}
                 {% include 'collection-grid-item', collection_image_size: image_size %}
               </div>
             {% endfor %}
