--- a/sections/featured-home.liquid
+++ b/sections/featured-home.liquid
@@ -71,7 +71,7 @@
           <hr>
         </div>
       </div>
-      {% if collections.preferidos.products.size > 0 %}
+      {% if collections['main-menu'].products.size > 0 %}
 
 {% for product in collections['main-menu'].products %}
 
